# SistemaBiblioteca

./: CMakeLists.txt  DadosUser.txt  Inventario.txt  README.md  arquivoEntrada.txt
include/: arvore.h  cadastro.h  historico.h  livro.h  login.h  node.h  organizacaoBiblioteca.h  usuario.h
src/: arvore.cpp  historico.cpp  login.cpp  main.cpp  node.cpp  usuario.cpp
